# rosa_gpu_jax

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: bench_dp_accuracy.py  bench_hash_vs_mask.py  bench_postings.py
examples/: smoke_test.py
src/rosa_gpu_jax/: __init__.py  bitset.py  block_table.py  candidates.py  causal.py  counterfactual.py  cpu_candidates.py  diag_dp.py  dp.py  dp_tpu.py  filters.py  postings.py  prefix_table.py  radix_events.py  reference.py  rolling_hash.py  rolling_verified.py  shift_and.py  streaming_causal.py  suffix_tree_lookup.py  validation.py
tests/: test_bitset.py  test_block_table.py  test_candidates.py  test_counterfactual.py  test_diag_dp.py  test_dp.py  test_official_rosa_semantics.py  test_postings.py  test_prefix_table.py  test_radix_events.py  test_rolling_verified.py  test_shift_and.py  test_streaming_causal.py  test_suffix_array.py
