[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rosa-gpu-jax"
version = "0.1.0"
description = "JAX research prototypes for GPU-friendly ROSA-style suffix lookup."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Research prototype" }
]
keywords = ["jax", "suffix-matching", "long-context", "rosa", "gpu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jax>=0.4.28",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
cuda12 = [
  "jax[cuda12]>=0.4.28",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rosa_gpu_jax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
